--- a/vignettes/Tutorial.Rmd
+++ b/vignettes/Tutorial.Rmd
@@ -30,7 +30,8 @@ at a minimum the following parameters to the function *agg_test()*:
 
 **vcf_file**: The file name and path of the VCF to be used as the reference panel.
 
-**chr**: The numeric chromosome number to use in this analysis. 
+**chr**: The chromosome used in the analysis. Note that this needs to be in the 
+same format as in the VCF, which in this case is chr2.
 
 At least one of **burden**, **wburden**, or **SKAT** to be set to TRUE. By default 
 **burden** is TRUE and the other 2 are FALSE. 
@@ -76,7 +77,7 @@ Now note that the phenotype was generated using the *NEB* gene on chromosome
 set **chr** to 2, **gene_start** to 151485339, and **gene_end** to 151734476. 
 
 ```{r}
-chr <- "c2"
+chr <- "chr2"
 gene_start <- 151485339
 gene_end <- 151734476
 ```
