--- a/vignettes/Tutorial.Rmd
+++ b/vignettes/Tutorial.Rmd
@@ -233,22 +233,25 @@ agg_test(score_stat_file, vcf_file, chr, burden, wburden,
                      hwe = 0.000001)
 ```
 
+The pLOF results should now be available at trueCovariance_pLOF.meta.burden.results; the pLOF + missense(narrow)
+results should be available at trueCovariance_pLOF_narrowMissense.meta.burden.results; the 
+pLOF + missense(broad) results should be available at trueCovariance_pLOF_broadMissense.meta.burden.results
 
 
 ```{r}
-pLOF_res <- fread("pLOF.meta.burden.results", header = TRUE, data.table = FALSE)
+pLOF_res <- fread("trueCovariance_pLOF.meta.burden.results", header = TRUE, data.table = FALSE)
 print(pLOF_res)
 ```
 
 
 ```{r}
-pLOF_narrowMissense_res <- fread("pLOF_narrowMissense.meta.burden.results", header = TRUE, data.table = FALSE)
+pLOF_narrowMissense_res <- fread("trueCovariance_pLOF_narrowMissense.meta.burden.results", header = TRUE, data.table = FALSE)
 print(pLOF_narrowMissense_res)
 ```
 
 
 ```{r}
-pLOF_broadMissense_res <- fread("pLOF_broadMissense.meta.burden.results", header = TRUE, data.table = FALSE)
+pLOF_broadMissense_res <- fread("trueCovariance_pLOF_broadMissense.meta.burden.results", header = TRUE, data.table = FALSE)
 print(pLOF_broadMissense_res)
 ```
 
