--- a/vignettes/Tutorial.Rmd
+++ b/vignettes/Tutorial.Rmd
@@ -184,7 +184,8 @@ agg_test(score_stat_file, vcf_file, chr, burden, wburden,
                      pLOF_narrowMissense = pLOF_narrowMissense,
                      pLOF_broadMissense = pLOF_broadMissense,
                      altGroupFilePath = NULL, altCovariancePath = NULL,
-                     altRaremetalPath = NULL, mafThreshold = 0.01, gene = "NEB",
+                     altRaremetalPath = NULL, altRaremetalName = NULL,
+                     mafThreshold = 0.01, gene = "NEB",
                      gene_start = gene_start, gene_end = gene_end, 
                      hwe = 0.000001)
 ```
@@ -242,7 +243,8 @@ agg_test(score_stat_file, vcf_file, chr, burden, wburden,
                      pLOF_narrowMissense = pLOF_narrowMissense,
                      pLOF_broadMissense = pLOF_broadMissense,
                      altGroupFilePath = NULL, altCovariancePath = NULL,
-                     altRaremetalPath = "trueCovariance_", mafThreshold = 0.01, 
+                     altRaremetalPath = "trueCovariance_", 
+                     altRaremetalName = NULL, mafThreshold = 0.01, 
                      gene = "NEB", gene_start = gene_start, gene_end = gene_end, 
                      hwe = 0.000001)
 ```
@@ -316,7 +318,8 @@ agg_test(score_stat_file, vcf_file, chr, burden, wburden,
                      pLOF_narrowMissense = FALSE,
                      pLOF_broadMissense = FALSE,
                      altGroupFilePath = NULL, altCovariancePath = NULL,
-                     altRaremetalPath = altRaremetalPath, mafThreshold = 0.01, gene = "NEB",
+                     altRaremetalPath = altRaremetalPath, altRaremetalName = NULL,
+                     mafThreshold = 0.01, gene = "NEB",
                      gene_start = gene_start, gene_end = gene_end, 
                      hwe = 0.000001)
 ```
