--- a/vignettes/Tutorial.Rmd
+++ b/vignettes/Tutorial.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library("externalCov")
+library("RVcov")
 library("data.table")
 library("stringr")
 ```
